# shadowsocks-netio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/shadowsocks-netio/: shadowsocks-netio.h
src/: client.c  internal.h  server.c  util.c
