CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(shadowsocks-netio C)

SET(CMAKE_C_STANDARD 99)

# LIBUV DIR
SET(LIBUV_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../libuv)

SET(SHADOWSOCKSNETIO_ADDTION_HDR
        ${LIBUV_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        )

INCLUDE_DIRECTORIES(${SHADOWSOCKSNETIO_ADDTION_HDR})

# ADD LIBUV PROJECT
ADD_SUBDIRECTORY(${LIBUV_DIR} ${CMAKE_BINARY_DIR}/libuv)

SET(SHADOWSOCKSNETIO_SRC
        ${CMAKE_CURRENT_SOURCE_DIR}/src/server.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/util.c
        )

ADD_LIBRARY(shadowsocks-netio ${SHADOWSOCKSNETIO_SRC})
TARGET_LINK_LIBRARIES(shadowsocks-netio uv_a)
